--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     }
   ],
   "require": {
-    "illuminate/contracts": "^5.5"
+    "illuminate/contracts": "^5.5",
+    "illuminate/support": "^5.5"
   },
   "autoload": {
     "psr-4": {
