--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,9 @@
     }
   },
   "version": "0.0.1",
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "require-dev": {
+    "phpunit/phpunit": "^7.0",
+    "fzaninotto/faker": "^1.7"
+  }
 }
