--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,14 @@
       "Ameliorate\\": "Ameliorate/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "spec\\Helpers\\": "spec/Helpers/"
+    }
+  },
   "minimum-stability": "dev",
   "require-dev": {
-    "phpunit/phpunit": "^7.0",
-    "fzaninotto/faker": "^1.7"
+    "fzaninotto/faker": "^1.7",
+    "phpspec/phpspec": "^4.3"
   }
 }
