--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
   ],
   "require": {
     "illuminate/contracts": "^5.5",
-    "illuminate/support": "^5.5"
+    "illuminate/support": "^5.5",
+    "php": "7.1.*",
+    "mockery/mockery": "^1.3"
   },
   "autoload": {
     "psr-4": {
@@ -22,12 +24,14 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "spec\\Helpers\\": "spec/Helpers/"
+      "spec\\": "spec/",
+      "tests\\": "tests/"
     }
   },
   "minimum-stability": "dev",
   "require-dev": {
     "fzaninotto/faker": "^1.7",
-    "phpspec/phpspec": "^4.3"
+    "phpspec/phpspec": "^4.3",
+    "phpunit/phpunit": "^7"
   }
 }
